# tmail-link

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yaml  ci.yml  qa.yaml  release.yaml
scripts/: build.sh  check-types.sh  client-test.sh  format.sh  lint.sh
src/: lib.py  models.py
tests/: docker-compose.yaml  test_lib.py
