[project]
name = "tmail-link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "curl-cffi>=0.13.0",
    "pydantic>=2.11.7",
    "pydash>=8.0.5",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pyright[nodejs]>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.9",
]
