[project]
name = "tmail-link-client"
version = "0.2.0"
description = "an python client of disposable temporary email provider https://tmail.link"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "curl-cffi>=0.13.0",
    "pydantic>=2.11.7",
    "pydash>=8.0.5",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "dotenv>=0.9.9",
    "pyright[nodejs]>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.9",
]
